--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -194,313 +194,6 @@ sim-time-limit = 1000s
 *.Bikenode[*].veinsmobility.y = 0
 *.Bikenode[*].veinsmobility.z = 1.895
 
-[Config WithoutChSw-slotted]
-
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3
-*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
-*.node[*].appl.Slotted_tau = 0.005 #0.32 #1.45
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
-
-
-[Config WithoutChSw-TrAD]
-
-*.node[*].appl.TrAD = true
-*.node[*].appl.TrAD_ti = 0.005
-*.node[*].appl.TrAD_alpha = 10 
-*.node[*].appl.TrAD_Neig = 25
-*.node[*].appl.TrAD_R = 366 # en base a TrAD
-*.node[*].appl.beaconInterval = 0.1s # ${0.1s,0.5s}
-sim-time-limit = 1000s
-
-[Config WithoutChSw-WSA-slotted-PerWSM]
-
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 7 #5
-*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
-*.node[*].appl.Slotted_tau = 0.005#1.45
-*.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
-
-#
-*.node[*].appl.sendWSA = true
-*.node[*].appl.Send_Per_WSM= true
-
-*.node[*].veinsmobility.accidentCount = 1
-*.node[*].veinsmobility.accidentStart = 700s
-*.node[*].veinsmobility.accidentDuration = 200s
-
-*.node[*].appl.Accident_start = 700
-
-sim-time-limit = 1000s
-
-[Config WithoutChSw-WSA-TrAD-PerWSM]
-**.vector-recording = false
-
-*.node[*].appl.TrAD = true
-*.node[*].appl.TrAD_ti = 0.005
-*.node[*].appl.TrAD_alpha = 10 
-*.node[*].appl.TrAD_Neig = 25
-*.node[*].appl.TrAD_R = 366 
-*.node[*].appl.beaconInterval = 0.1 #${0.1s,0.5s}
-
-*.node[*].appl.sendWSA = true
-*.node[*].appl.Send_Per_WSM= true
-
-*.node[*].veinsmobility.accidentCount = 1
-*.node[*].veinsmobility.accidentStart = 700s
-*.node[*].veinsmobility.accidentDuration = 200s
-
-*.node[*].appl.Accident_start = 700
-
-[Config WithChSw-slotted-WSM_Ns5]
-**.vector-recording = true #false
-
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
-*.node[*].appl.Slotted_tau = 0.005 #1.45
-
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 300s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
-
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false
-
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false#${false,true}
-
-*.node[*].veinsmobility.accidentCount = 1
-*.node[63].veinsmobility.accidentStart = 305s
-*.node[63].veinsmobility.accidentDuration = 5s
-*.node[63].appl.Accident_start = 305
-*.node[63].appl.MeInAcc = true
-
-sim-time-limit = 310s
-
-#repeat = 20
-
-[Config WithChSw-slotted-WSM_Ns7]
-**.vector-recording = false
-cmdenv-express-mode = false
-
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
-*.node[*].appl.Slotted_tau = 0.005 #1.45
-
-*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s}#0.1s#${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.node[*].appl.NTL_target = ${0,1,2 !NTL}
-*.node[*].appl.aware = true 
-
-
-*.manager.firstStepAt = 300s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
-
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false
-
-*.node[*].appl.Send_Per_WSM = false #${false,true}
-*.node[*].appl.sendWSA =${false,false,true !NTL}
-
-*.node[*].veinsmobility.accidentCount = 1
-*.node[63].veinsmobility.accidentStart = 305s #320s #305s
-*.node[63].veinsmobility.accidentDuration = 5s #5s
-*.node[63].appl.Accident_start = 305# 320 #305
-*.node[63].appl.MeInAcc = true
-
-sim-time-limit = 310s
-
-repeat = 20
-
-
-[Config WithChSw-TrAD-WSM]
-
-**.vector-recording = false
-
-*.node[*].appl.TrAD = true
-*.node[*].appl.TrAD_ti = 0.005
-
-*.node[*].appl.TrAD_alpha = 10 
-*.node[*].appl.TrAD_Neig = 25
-*.node[*].appl.TrAD_R = 366 
-
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 300s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-
-*.node[*].appl.Send_Per_WSM= false
-*.node[*].appl.sendWSA = ${false,true}
-
-
-
-*.node[63].veinsmobility.accidentCount = 1
-*.node[63].veinsmobility.accidentStart = 305s
-*.node[63].veinsmobility.accidentDuration = 5s
-*.node[63].appl.Accident_start = 305
-*.node[63].appl.MeInAcc = true
-
-
-
-sim-time-limit = 310s
-
-#repeat = 20
-
-
-[Config WithChannelSwitching]
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-*.rsu[*].appl.dataOnSch = true
-
-[Config WithChSw-slotted-WSM_Ns3_p2]
-**.vector-recording = true
-
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3
-*.node[*].appl.Slotted_R = 300 #40
-*.node[*].appl.Slotted_tau = 0.005 #1.45
-
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 110s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
-
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = ${false,true}
-
-*.node[*].veinsmobility.accidentCount = 1
-*.node[46].veinsmobility.accidentStart = 115s
-*.node[46].veinsmobility.accidentDuration = 5s
-*.node[46].appl.Accident_start = 115
-*.node[46].appl.MeInAcc = true
-
-sim-time-limit = 120s
-
-repeat = 20
-
-[Config WithChSw-TrAD-WSM-p2]
-
-**.vector-recording = true
-
-*.node[*].appl.TrAD = true
-*.node[*].appl.TrAD_ti = 0.005
-
-*.node[*].appl.TrAD_alpha = 10 
-*.node[*].appl.TrAD_Neig = 25
-*.node[*].appl.TrAD_R = 366 
-
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 110s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-
-*.node[*].appl.Send_Per_WSM= false
-*.node[*].appl.sendWSA = ${false,true}
-
-
-
-*.node[46].veinsmobility.accidentCount = 1
-*.node[46].veinsmobility.accidentStart = 115s
-*.node[46].veinsmobility.accidentDuration = 5s
-*.node[46].appl.Accident_start = 115
-*.node[46].appl.MeInAcc = true
-
-
-sim-time-limit = 120s
-
-#repeat = 20
-
-[Config WithChSw-slotted-WSM_p3]
-**.vector-recording = false
-cmdenv-express-mode = false
-
-#*.node[*].appl.appName = "myWaveAppLayer"
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.node[*].appl.Slotted_R = 300 #40
-*.node[*].appl.Slotted_tau = 0.005 #1.45
-
-*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
-
-*.node[*].appl.NTL_target = ${0,1,2 !NTL}
-*.node[*].appl.aware = true 
-
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 90s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
-
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
-
-*.node[*].veinsmobility.accidentCount = 1 #0 #1
-*.node[10].veinsmobility.accidentStart =  95s#120s #95s
-*.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95#120 #95
-*.node[10].appl.MeInAcc = true
-
-sim-time-limit = 100s
-
-repeat = 20
-
-[Config WithChSw-TrAD-WSM-p3]
-
-**.vector-recording = true
-
-*.node[*].appl.TrAD = true
-*.node[*].appl.TrAD_ti = 0.005
-
-*.node[*].appl.TrAD_alpha = 10 
-*.node[*].appl.TrAD_Neig = 25
-*.node[*].appl.TrAD_R = 366 
-
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 90s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-
-*.node[*].appl.Send_Per_WSM= false
-*.node[*].appl.sendWSA = ${false,true}
-
-
-
-*.node[10].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 95s
-*.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95
-*.node[10].appl.MeInAcc = true
-
-sim-time-limit = 100s
-
-repeat = 20
 
 [Config Ped_Crossing-slotted-WSM]
 
@@ -513,7 +206,7 @@ cmdenv-express-mode = true
 
 # Set Scenario 
 
-*.manager.firstStepAt = ${DEN=18500s,23500s,28500s,33500s,38500s,43500s} 
+*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
 *.manager.roiRects = "4735,2149-4935,2349"
 
 #########################
@@ -525,15 +218,15 @@ cmdenv-express-mode = true
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 50s #${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.1s } #${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
 
-*.node[*].appl.NTL_target = ${NTL=0}#,1,2}
+*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
 *.node[*].appl.aware = false
 
 *.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
+*.node[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
 
 *.node[*].veinsmobility.accidentCount = 0 #0 #1
 *.node[10].veinsmobility.accidentStart =  50000s#120s #95s
@@ -550,15 +243,15 @@ cmdenv-express-mode = true
 *.Pednode[*].appl.Slotted_R = 300 #40
 *.Pednode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Pednode[*].appl.beaconInterval = 50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.1s !BL}#${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
 
-*.Pednode[*].appl.NTL_target = ${0,1,2 !NTL}
+*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Pednode[*].appl.aware = false 
 
 *.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.Pednode[*].appl.Send_Per_WSM = false
-*.Pednode[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
+*.Pednode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
 
 ########################
 #### Bicycle Nodes #####
@@ -569,15 +262,15 @@ cmdenv-express-mode = true
 *.Bicyclenode[*].appl.Slotted_R = 300 #40
 *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bicyclenode[*].appl.beaconInterval = 50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.1s !BL} #50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
 
-*.Bicyclenode[*].appl.NTL_target = ${0,1,2 !NTL}
+*.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bicyclenode[*].appl.aware = false 
 
 *.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
+*.Bicyclenode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
 
 #####################
 #### Bike Nodes #####
@@ -588,15 +281,17 @@ cmdenv-express-mode = true
 *.Bicyclenode[*].appl.Slotted_R = 300 #40
 *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bicyclenode[*].appl.beaconInterval = 50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
 
-*.Bicyclenode[*].appl.NTL_target = ${0,1,2 !NTL}
+*.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bicyclenode[*].appl.aware = false 
 
 *.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
+*.Bicyclenode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
 
 
-sim-time-limit = ${18510s,23510s,28510s,33510s,38510s,43510s !DEN} 
+sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+
+repeat=10
