corriegiendo configuraciones y agregando reglas

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -12,7 +12,7 @@ network = MoST_scenario
 ##########################################################
 #            Simulation parameters                       #
 ##########################################################
-debug-on-errors = false
+debug-on-errors = true
 print-undisposed = false
 
 sim-time-limit = 1000s
@@ -56,12 +56,6 @@ sim-time-limit = 1000s
 #*.manager.moduleType = "typePassenger=org.car2x.veins.nodes.Car ped=org.car2x.veins.nodes.Car"
 #*.manager.moduleName = "typePassenger=node ped=Pednode"
 #*.manager.moduleDisplayString = "typePassenger='i=veins/node/pedestrian;is=vs' ped='i=veins/node/pedestrian;is=vs'"
-
-
-#*.manager.roiRects = "20,20-30,30 20,20-30,30"
-
-# Número de Vehiculos
-#*.manager.numVehicles = 2000
 #
 #INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: DEFAULT_PEDTYPE
 #INFO (TraCIScenarioManagerLaunchd)MoST_scenario.manager: avgbicycle
@@ -143,7 +137,7 @@ sim-time-limit = 1000s
 *.node[*].appl.beaconUserPriority = 5
 *.node[*].appl.dataUserPriority = 7
 
-*.Pednode[*].applType = "myWaveAppLayer"
+*.Pednode[*].applType = "PedAppLayer"
 *.Pednode[*].appl.headerLength = 80 bit
 *.Pednode[*].appl.sendBeacons = true
 *.Pednode[*].appl.dataOnSch = false
@@ -151,7 +145,7 @@ sim-time-limit = 1000s
 *.Pednode[*].appl.beaconUserPriority = 5
 *.Pednode[*].appl.dataUserPriority = 7
 
-*.Bicyclenode[*].applType = "myWaveAppLayer"
+*.Bicyclenode[*].applType = "PedAppLayer"
 *.Bicyclenode[*].appl.headerLength = 80 bit
 *.Bicyclenode[*].appl.sendBeacons = true
 *.Bicyclenode[*].appl.dataOnSch = false
@@ -159,7 +153,7 @@ sim-time-limit = 1000s
 *.Bicyclenode[*].appl.beaconUserPriority = 5
 *.Bicyclenode[*].appl.dataUserPriority = 7
 
-*.Bikenode[*].applType = "myWaveAppLayer"
+*.Bikenode[*].applType = "PedAppLayer"
 *.Bikenode[*].appl.headerLength = 80 bit
 *.Bikenode[*].appl.sendBeacons = true
 *.Bikenode[*].appl.dataOnSch = false
@@ -194,8 +188,10 @@ sim-time-limit = 1000s
 *.Bikenode[*].veinsmobility.y = 0
 *.Bikenode[*].veinsmobility.z = 1.895
 
-
-[Config Ped_Crossing-slotted-WSM-BS]
+###################################################
+## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
+###################################################
+[Config Ped_Crossing-BL]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -218,15 +214,14 @@ cmdenv-express-mode = true
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.1s } #${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
-
+*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
 *.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
 *.node[*].appl.aware = false
 
 *.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
+*.node[*].appl.sendWSA = false 
 
 *.node[*].veinsmobility.accidentCount = 0 #0 #1
 *.node[10].veinsmobility.accidentStart =  50000s#120s #95s
@@ -243,7 +238,7 @@ cmdenv-express-mode = true
 *.Pednode[*].appl.Slotted_R = 300 #40
 *.Pednode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.1s !BL}#${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 
 *.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Pednode[*].appl.aware = false 
@@ -262,8 +257,7 @@ cmdenv-express-mode = true
 *.Bicyclenode[*].appl.Slotted_R = 300 #40
 *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.1s !BL} #50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
-
+*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 *.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bicyclenode[*].appl.aware = false 
 
@@ -276,20 +270,348 @@ cmdenv-express-mode = true
 #### Bike Nodes #####
 #####################
 
+*.Bikenode[*].appl.Slotted1Enabled = true
+*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bikenode[*].appl.Slotted_R = 300 #40
+*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
+
+*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Bikenode[*].appl.aware = false 
+
+*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bikenode[*].appl.Send_Per_WSM = false
+*.Bikenode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
+
+
+sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+
+repeat=10
+
+
+###########################################################
+## Only VRU OnStreet send beacons with r=1Hz,2Hz,5Hz,10Hz #
+###########################################################
+[Config Ped_Crossing-OnStreet]
+
+**.vector-recording = false
+cmdenv-express-mode = true
+
+# Service Channel
+
+*.**.nic.mac1609_4.useServiceChannel = true
+
+# Set Scenario 
+
+*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
+*.manager.roiRects = "4735,2149-4935,2349"
+
+#########################
+#### Normal Vehicle #####
+#########################
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+
+*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
+*.node[*].appl.aware = false
+
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = false 
+
+*.node[*].veinsmobility.accidentCount = 0 #0 #1
+*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 50000#120 #95
+*.node[10].appl.MeInAcc = false
+
+###########################
+#### Pedestrian Nodes #####
+###########################
+
+*.Pednode[*].appl.Slotted1Enabled = true
+*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Pednode[*].appl.Slotted_R = 300 #40
+*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
+
+*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Pednode[*].appl.aware = false 
+
+*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Pednode[*].appl.Send_Per_WSM = false
+*.Pednode[*].appl.sendWSA = false 
+
+*.Pednode[*].appl.OnStreet = true
+
+########################
+#### Bicycle Nodes #####
+########################
+
 *.Bicyclenode[*].appl.Slotted1Enabled = true
 *.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
 *.Bicyclenode[*].appl.Slotted_R = 300 #40
 *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
-
+*.Bicyclenode[*].appl.beaconInterval = 0.2s # ${1s,0.5s,0.1s !BL} # 1Hz, 2Hz ,10 Hz
 *.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bicyclenode[*].appl.aware = false 
 
 *.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
+*.Bicyclenode[*].appl.sendWSA = false 
+
+*.Bicyclenode[*].appl.OnStreet = true
+
+#####################
+#### Bike Nodes #####
+#####################
+
+*.Bikenode[*].appl.Slotted1Enabled = true
+*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bikenode[*].appl.Slotted_R = 300 #40
+*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Bikenode[*].appl.beaconInterval = 0.2s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
+
+*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Bikenode[*].appl.aware = false 
+
+*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bikenode[*].appl.Send_Per_WSM = false
+*.Bikenode[*].appl.sendWSA = false 
+
+*.Bikenode[*].appl.OnStreet = true
+
+
+sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+
+repeat=10
+
+
+###############################################################
+## Only VRU whit Speed>0 send beacons with r=1Hz,2Hz,5Hz,10Hz #
+###############################################################
+[Config Ped_Crossing-MovinPed]
+
+**.vector-recording = false
+cmdenv-express-mode = true
+
+# Service Channel
+
+*.**.nic.mac1609_4.useServiceChannel = true
+
+# Set Scenario 
+
+*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
+*.manager.roiRects = "4735,2149-4935,2349"
+
+#########################
+#### Normal Vehicle #####
+#########################
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+
+*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
+*.node[*].appl.aware = false
+
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = false 
+
+*.node[*].veinsmobility.accidentCount = 0 #0 #1
+*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 50000#120 #95
+*.node[10].appl.MeInAcc = false
+
+###########################
+#### Pedestrian Nodes #####
+###########################
+
+*.Pednode[*].appl.Slotted1Enabled = true
+*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Pednode[*].appl.Slotted_R = 300 #40
+*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
+
+*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Pednode[*].appl.aware = false 
+
+*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Pednode[*].appl.Send_Per_WSM = false
+*.Pednode[*].appl.sendWSA = false 
+
+*.Pednode[*].appl.MovinPed = true
+
+########################
+#### Bicycle Nodes #####
+########################
+
+*.Bicyclenode[*].appl.Slotted1Enabled = true
+*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bicyclenode[*].appl.Slotted_R = 300 #40
+*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Bicyclenode[*].appl.beaconInterval = 0.2s # ${1s,0.5s,0.1s !BL} # 1Hz, 2Hz ,10 Hz
+*.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Bicyclenode[*].appl.aware = false 
+
+*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bicyclenode[*].appl.Send_Per_WSM = false
+*.Bicyclenode[*].appl.sendWSA = false 
+
+*.Bicyclenode[*].appl.MovinPed = true
+
+#####################
+#### Bike Nodes #####
+#####################
+
+*.Bikenode[*].appl.Slotted1Enabled = true
+*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bikenode[*].appl.Slotted_R = 300 #40
+*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Bikenode[*].appl.beaconInterval = 0.2s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
+
+*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Bikenode[*].appl.aware = false 
+
+*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bikenode[*].appl.Send_Per_WSM = false
+*.Bikenode[*].appl.sendWSA = false 
+
+*.Bikenode[*].appl.MovinPed = true
+
+
+sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
+
+repeat=10
+
+########################################################
+## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
+########################################################
+
+[Config Ped_Crossing-MultipleTx]
+
+**.vector-recording = false
+cmdenv-express-mode = true
+
+# Service Channel
+
+*.**.nic.mac1609_4.useServiceChannel = true
+
+# Set Scenario 
+
+*.manager.firstStepAt = ${DEN=23500s,28500s,33500s,38500s} # 18500s,43500s} 
+*.manager.roiRects = "4735,2149-4935,2349"
+
+#########################
+#### Normal Vehicle #####
+#########################
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = 1s 
+
+*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
+*.node[*].appl.aware = false
+
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = false 
+
+*.node[*].veinsmobility.accidentCount = 0 
+*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 50000#120 #95
+*.node[10].appl.MeInAcc = false
+
+###########################
+#### Pedestrian Nodes #####
+###########################
+
+*.Pednode[*].appl.Slotted1Enabled = true
+*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Pednode[*].appl.Slotted_R = 300 #40
+*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Pednode[*].appl.beaconInterval = 1s #${1s,0.5s,0.1s !BL}
+
+*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Pednode[*].appl.aware = false 
+
+*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Pednode[*].appl.Send_Per_WSM = false
+*.Pednode[*].appl.sendWSA = false 
+
+*.Pednode[*].appl.MultipleTx = true
+
+########################
+#### Bicycle Nodes #####
+########################
+
+*.Bicyclenode[*].appl.Slotted1Enabled = true
+*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bicyclenode[*].appl.Slotted_R = 300 #40
+*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Bicyclenode[*].appl.beaconInterval = 1s 
+*.Bicyclenode[*].appl.NTL_target = 0 
+*.Bicyclenode[*].appl.aware = false 
+
+*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bicyclenode[*].appl.Send_Per_WSM = false
+*.Bicyclenode[*].appl.sendWSA = false 
+*.Bicyclenode[*].appl.MultipleTx = true
+
+#####################
+#### Bike Nodes #####
+#####################
+
+*.Bikenode[*].appl.Slotted1Enabled = true
+*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bikenode[*].appl.Slotted_R = 300 #40
+*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Bikenode[*].appl.beaconInterval = 0.2s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
+
+*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+*.Bikenode[*].appl.aware = false 
+
+*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bikenode[*].appl.Send_Per_WSM = false
+*.Bikenode[*].appl.sendWSA = false 
+*.Bikenode[*].appl.MultipleTx = true
 
 
 sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
