corrigiendo debug y braconInterval en reglas

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -12,7 +12,7 @@ network = MoST_scenario
 ##########################################################
 #            Simulation parameters                       #
 ##########################################################
-debug-on-errors = true
+debug-on-errors = false
 print-undisposed = false
 
 sim-time-limit = 1000s
@@ -164,7 +164,7 @@ sim-time-limit = 1000s
 ##########################################################
 #                      Mobility                          #
 ##########################################################
-*.node[*].veinsmobilityType.debug = true
+*.node[*].veinsmobilityType.debug = false
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
@@ -173,17 +173,17 @@ sim-time-limit = 1000s
 *.node[*].veinsmobility.accidentDuration = 20s
 *.node[*].appl.Accident_start = 3
 
-*.Pednode[*].veinsmobilityType.debug = true
+*.Pednode[*].veinsmobilityType.debug = false
 *.Pednode[*].veinsmobility.x = 0
 *.Pednode[*].veinsmobility.y = 0
 *.Pednode[*].veinsmobility.z = 1.895
 
-*.Bicyclenode[*].veinsmobilityType.debug = true
+*.Bicyclenode[*].veinsmobilityType.debug = false
 *.Bicyclenode[*].veinsmobility.x = 0
 *.Bicyclenode[*].veinsmobility.y = 0
 *.Bicyclenode[*].veinsmobility.z = 1.895
 
-*.Bikenode[*].veinsmobilityType.debug = true
+*.Bikenode[*].veinsmobilityType.debug = false
 *.Bikenode[*].veinsmobility.x = 0
 *.Bikenode[*].veinsmobility.y = 0
 *.Bikenode[*].veinsmobility.z = 1.895
@@ -246,7 +246,7 @@ cmdenv-express-mode = true
 *.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.Pednode[*].appl.Send_Per_WSM = false
-*.Pednode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
+*.Pednode[*].appl.sendWSA = false 
 
 ########################
 #### Bicycle Nodes #####
@@ -264,7 +264,7 @@ cmdenv-express-mode = true
 *.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
+*.Bicyclenode[*].appl.sendWSA = false 
 
 #####################
 #### Bike Nodes #####
@@ -283,7 +283,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.Bikenode[*].appl.Send_Per_WSM = false
-*.Bikenode[*].appl.sendWSA = false #${false,false,true !NTL} #true #${false,true}
+*.Bikenode[*].appl.sendWSA = false 
 
 
 sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
