corrigiendo inicialización de beaconInterval

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -363,7 +363,7 @@ cmdenv-express-mode = true
 *.Bicyclenode[*].appl.Slotted_R = 300 #40
 *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bicyclenode[*].appl.beaconInterval = 0.2s # ${1s,0.5s,0.1s !BL} # 1Hz, 2Hz ,10 Hz
+*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 *.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bicyclenode[*].appl.aware = false 
 
@@ -383,7 +383,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.Slotted_R = 300 #40
 *.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bikenode[*].appl.beaconInterval = 0.2s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
+*.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 
 *.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bikenode[*].appl.aware = false 
@@ -473,7 +473,7 @@ cmdenv-express-mode = true
 *.Bicyclenode[*].appl.Slotted_R = 300 #40
 *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bicyclenode[*].appl.beaconInterval = 0.2s # ${1s,0.5s,0.1s !BL} # 1Hz, 2Hz ,10 Hz
+*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 *.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bicyclenode[*].appl.aware = false 
 
@@ -493,7 +493,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.Slotted_R = 300 #40
 *.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bikenode[*].appl.beaconInterval = 0.2s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
+*.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 
 *.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bikenode[*].appl.aware = false 
@@ -602,7 +602,7 @@ cmdenv-express-mode = true
 *.Bikenode[*].appl.Slotted_R = 300 #40
 *.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bikenode[*].appl.beaconInterval = 0.2s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
+*.Bikenode[*].appl.beaconInterval = 1s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
 
 *.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
 *.Bikenode[*].appl.aware = false 
