corrigiendo bug de velocidad nan en peatones y agregando nuev forma de calculo de CBR

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -36,8 +36,8 @@ sim-time-limit = 1000s
 ##########################################################
 # Obstacle parameters                                    #
 ##########################################################
-*.obstacles.debug = false
-#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.debug = true
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -145,7 +145,7 @@ sim-time-limit = 1000s
 *.Pednode[*].appl.beaconUserPriority = 5
 *.Pednode[*].appl.dataUserPriority = 7
 
-*.Bicyclenode[*].applType = "PedAppLayer"
+*.Bicyclenode[*].applType = "CycleAppLayer"
 *.Bicyclenode[*].appl.headerLength = 80 bit
 *.Bicyclenode[*].appl.sendBeacons = true
 *.Bicyclenode[*].appl.dataOnSch = false
@@ -153,7 +153,7 @@ sim-time-limit = 1000s
 *.Bicyclenode[*].appl.beaconUserPriority = 5
 *.Bicyclenode[*].appl.dataUserPriority = 7
 
-*.Bikenode[*].applType = "PedAppLayer"
+*.Bikenode[*].applType = "CycleAppLayer"
 *.Bikenode[*].appl.headerLength = 80 bit
 *.Bikenode[*].appl.sendBeacons = true
 *.Bikenode[*].appl.dataOnSch = false
@@ -406,8 +406,11 @@ repeat=10
 ###############################################################
 [Config Ped_Crossing-MovinPed]
 
-**.vector-recording = false
-cmdenv-express-mode = true
+#**.vector-recording = true
+#**.debug = true
+#**.coreDebug = 
+
+#cmdenv-express-mode = true
 
 # Service Channel
 
