--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -20,8 +20,8 @@ sim-time-limit = 1000s
 **.scalar-recording = true
 **.vector-recording = true
 
-**.debug = false
-**.coreDebug = false
+**.debug = true
+**.coreDebug = true
 
 *.playgroundSizeX = 10000m
 *.playgroundSizeY = 10000m
