modificando configuracion 200 bytes

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -36,8 +36,8 @@ sim-time-limit = 1000s
 ##########################################################
 # Obstacle parameters                                    #
 ##########################################################
-*.obstacles.debug = true
-*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+#*.obstacles.debug = true
+#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -114,7 +114,7 @@ sim-time-limit = 1000s
 
 *.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
 *.**.nic.mac1609_4.bitrate = 6Mbps
-*.**.nic.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+*.**.nic.phy80211p.sensitivity = -100dBm #-89dBm, en base a TrAD
 
 *.**.nic.phy80211p.useThermalNoise = true
 *.**.nic.phy80211p.thermalNoise = -110dBm
@@ -136,6 +136,7 @@ sim-time-limit = 1000s
 *.node[*].appl.beaconInterval = 1s
 *.node[*].appl.beaconUserPriority = 5
 *.node[*].appl.dataUserPriority = 7
+*.node[*].appl.beaconLengthBits = 1472 bit
 
 *.Pednode[*].applType = "PedAppLayer"
 *.Pednode[*].appl.headerLength = 80 bit
@@ -144,6 +145,7 @@ sim-time-limit = 1000s
 *.Pednode[*].appl.beaconInterval = 1s
 *.Pednode[*].appl.beaconUserPriority = 5
 *.Pednode[*].appl.dataUserPriority = 7
+*.Pednode[*].appl.beaconLengthBits = 1472 bit
 
 *.Bicyclenode[*].applType = "CycleAppLayer"
 *.Bicyclenode[*].appl.headerLength = 80 bit
@@ -152,6 +154,7 @@ sim-time-limit = 1000s
 *.Bicyclenode[*].appl.beaconInterval = 1s
 *.Bicyclenode[*].appl.beaconUserPriority = 5
 *.Bicyclenode[*].appl.dataUserPriority = 7
+*.Bicyclenode[*].appl.beaconLengthBits = 1472 bit
 
 *.Bikenode[*].applType = "CycleAppLayer"
 *.Bikenode[*].appl.headerLength = 80 bit
@@ -160,6 +163,7 @@ sim-time-limit = 1000s
 *.Bikenode[*].appl.beaconInterval = 1s
 *.Bikenode[*].appl.beaconUserPriority = 5
 *.Bikenode[*].appl.dataUserPriority = 7
+*.Bikenode[*].appl.beaconLengthBits = 1472 bit
 
 ##########################################################
 #                      Mobility                          #
@@ -191,14 +195,14 @@ sim-time-limit = 1000s
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-NoObstacle]
+[Config Ped_Crossing-BL-NoObstacle-200bytes]
 
 **.vector-recording = false
 cmdenv-express-mode = true
 
 # Service Channel
 
-*.**.nic.mac1609_4.useServiceChannel = true
+*.**.nic.mac1609_4.useServiceChannel = false
 
 # Set Scenario 
 
@@ -288,7 +292,7 @@ cmdenv-express-mode = true
 
 sim-time-limit = ${23510s,28510s,33510s,38510s !DEN} #18510s, ,43510s
 
-repeat=10
+repeat=5
 
 
 ###########################################################
