comentando linea de 200 bytes

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -163,7 +163,7 @@ sim-time-limit = 1000s
 *.Bikenode[*].appl.beaconInterval = 1s
 *.Bikenode[*].appl.beaconUserPriority = 5
 *.Bikenode[*].appl.dataUserPriority = 7
-*.Bikenode[*].appl.beaconLengthBits = 1472 bit
+*.Bikenode[*].appl.beaconLengthBits = 1472 bit #200bytes
 
 ##########################################################
 #                      Mobility                          #
